--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+	<repositories>
+		<repository>
+			<id>nutz</id>
+			<url>https://jfrog.nutz.cn/artifactory/jcenter</url>
+		</repository>
+		<repository>
+			<id>spring</id>
+			<url>https://jfrog.nutz.cn/artifactory/spring</url>
+		</repository>
+	</repositories>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -143,5 +153,6 @@
 		<module>rop-core</module>
 		<module>rop-server</module>
 		<module>rop-client</module>
+		<module>rop-demo</module>
 	</modules>
 </project>
