--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,13 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>cn.com.chinarecrm</groupId>
 	<artifactId>rop</artifactId>
-	<version>1.0</version>
 	<packaging>pom</packaging>
 	<name>rop</name>
 	<description>restful open platform</description>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.1.8.RELEASE</version>
+		<version>2.2.0.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<repositories>
@@ -44,7 +43,7 @@
 		</dependencies>
 	</dependencyManagement>
 	<properties>
-		<axe-version>1.0</axe-version>
+		<axe-version>2.2.0.RELEASE</axe-version>
 	</properties>
 	<licenses>
 		<license>
