--- a/rop-core/pom.xml
+++ b/rop-core/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>cn.com.chinarecrm</groupId>
 		<artifactId>rop</artifactId>
-		<version>1.0</version>
+		<version>2.2.0.RELEASE</version>
 	</parent>
 	<artifactId>rop-core</artifactId>
 	<name>rop-core</name>
