--- a/rop-demo/pom.xml
+++ b/rop-demo/pom.xml
@@ -3,7 +3,7 @@
   <parent>
     <groupId>cn.com.chinarecrm</groupId>
     <artifactId>rop</artifactId>
-    <version>1.0</version>
+    <version>2.2.0.RELEASE</version>
   </parent>
   <artifactId>rop-demo</artifactId>
   <name>rop-demo</name>
